# Storage-FastApi

./: alembic.ini  app.py  load_db.py  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 63edef7d6463_update_storedfiles_table_add_serversize.py  836623f53aa5_remove_testtable3.py  9f4ce0c27e83_initial_migration.py  ab2c1ee6ebd2_create_folders_table.py  b7c608cd7e9c_add_testtable3.py  d67203bd55bf_update_age_data_class.py  f89d98403252_add_stored_files_table.py
config/: db.py  load_env.py
html/files/: index.js  main.html  style.css
html/login/: index.js  main.html  style.css
html/test/: index.html  style.css
html/user/password/: index.html
middlewares/: verify_token_route.py
model/: db_model.py
routes/: files.py  sign_login.py  testing.py  users.py
schema/: user.py
